--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,11 +3,12 @@ workflows:
     name: Build Graph App APK
     max_build_duration: 60
     instance_type: mac_mini_m1
-    environment:
-      groups:
-        - keystore_credentials
     
     scripts:
+      - name: Set up Flutter
+        script: |
+          flutter doctor -v
+          
       - name: Install dependencies
         script: |
           flutter pub get
@@ -18,3 +19,8 @@ workflows:
           
     artifacts:
       - build/app/outputs/flutter-apk/**/*.apk
+      
+    publishing:
+      email:
+        recipients:
+          - your-email@example.com
