--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
-name: GraphicbuilderDart
-description: "Flutter Graph Plotter App"
+name: graph_app
+description: Построитель графиков функций
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
@@ -10,12 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
